--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,8 @@ jobs:
       - python/load-cache
       - python/install-deps
       - python/save-cache
+      - store_test_results:
+        path: test-results
       - run:
           command: ./test_runner
           name: Test
